messenger's story finished
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -86,20 +86,25 @@
 <p>&quot;Readily; I have solved others of an abstruseness ten thousand times greater. Circumstances, and a certain bias of mind, have led me to take interest in such riddles, and it may well be doubted whether human ingenuity can construct an enigma of the kind which human ingenuity may not, by proper application, resolve. In fact, having once established connected and legible characters, I scarcely gave a thought to the mere difficulty of developing their import.</p>
 <p>&quot;In the present case --indeed in all cases of secret writing --the first question regards the language of the cipher; for the principles of solution, so far, especially, as the more simple ciphers are concerned, depend on, and are varied by, the genius of the particular idiom. In general, there is no alternative but experiment (directed by probabilities) of every tongue known to him who attempts the solution, until the true one be attained. But, with the cipher now before us, all difficulty is removed by the signature. The pun on the word 'Kidd' is appreciable in no other language than the English. But for this consideration I should have begun my attempts with the Spanish and French, as the tongues in which a secret of this kind would most naturally have been written by a pirate of the Spanish main. As it was, I assumed the cryptograph to be English.</p>
 <p>&quot;You observe there are no divisions between the words. Had there been divisions, the task would have been comparatively easy. In such case I should have commenced with a collation and analysis of the shorter words, and, had a word of a single letter occurred, as is most likely, (a or I, for example,) I should have considered the solution as assured. But, there being no division, my first step was to ascertain the predominant letters, as well as the least frequent. Counting all, I constructed a table, thus:</p>
-<p>Of the character 8 there are 33.</p>
-<pre><code>   ;     &quot;     26.
-   4     &quot;     19.
- + )     &quot;     16.
-   *     &quot;     13.
-   5     &quot;     12.
-   6     &quot;     11.
- ! 1     &quot;      8.
-   0     &quot;      6.
- 9 2     &quot;      5.
- : 3     &quot;      4.
-   ?     &quot;      3.
-   `     &quot;      2.
- - .     &quot;      1.</code></pre>
+<pre><code>Of the character 8 there are 33.
+        &quot;        ;     &quot;     26.
+        &quot;        4     &quot;     19.
+        &quot;        +     &quot;     16.
+        &quot;        )     &quot;     16.
+        &quot;        *     &quot;     13.
+        &quot;        5     &quot;     12.
+        &quot;        6     &quot;     11.
+        &quot;        !     &quot;      8.
+        &quot;        1     &quot;      8.
+        &quot;        0     &quot;      6.
+        &quot;        9     &quot;      5.
+        &quot;        2     &quot;      5.
+        &quot;        :     &quot;      4.
+        &quot;        3     &quot;      4.
+        &quot;        ?     &quot;      3.
+        &quot;        `     &quot;      2.
+        &quot;        -     &quot;      1.
+        &quot;        .     &quot;      1.</code></pre>
 <p>&quot;Now, in English, the letter which most frequently occurs is e. Afterwards, the succession runs thus: a o i d h n r s t u y c f g l m w b k p q x z. E however predominates so remarkably that an individual sentence of any length is rarely seen, in which it is not the prevailing character.</p>
 <p>&quot;Here, then, we have, in the very beginning, the groundwork for something more than a mere guess. The general use which may be made of the table is obvious --but, in this particular cipher, we shall only very partially require its aid. As our predominant character is 8, we will commence by assuming it as the e of the natural alphabet. To verify the supposition, let us observe if the 8 be seen often in couples --for e is doubled with great frequency in English --in such words, for example, as 'meet,' 'fleet,' 'speed, 'seen,' 'been,' 'agree,' &amp;c. In the present instance we see it doubled less than five times, although the cryptograph is brief.</p>
 <p>&quot;Let us assume 8, then, as e. Now, of all words in the language, 'the' is the most usual; let us see, therefore, whether they are not repetitions of any three characters in the same order of collocation, the last of them being 8. If we discover repetitions of such letters, so arranged, they will most probably represent the word 'the.' On inspection, we find no less than seven such arrangements, the characters being ;48. We may, therefore, assume that the semicolon represents t, that 4 represents h, and that 8 represents e --the last being now well confirmed. Thus a great step has been taken.</p>
@@ -158,33 +163,55 @@
 <p>Don't be lazy and actually take a look. This is your chance of getting a feeling of what the actual cryptanalysis feels like.</p>
 <p>If you've spent at least XV minutes trying to solve the puzzle and now you are out of your wits proceed to section LXXV and get your first hint.</p>
 <h1 id="section-5">32.</h1>
-<p>A portal suddenly opened on the starboard ejecting a fleet of imperial pursuit vessels. The propulsion system of my ship got hit before the shield activated. I’ve tried to switch on the backup drive but before it charged to 5% I was already dangling off a dozen tractor beams.</p>
+<p>A portal suddenly opened on the starboard ejecting a fleet of imperial pursuit vessels. The propulsion system of my ship got hit before the shield activated. I’ve tried to switch on the backup drive but before it charged to as much as 5% I was already dangling off a dozen tractor beams.</p>
 <p>It wasn’t much of a fight. They’ve just came and picked me up as one would pick up a box of frozen strawberries in a supermarket.</p>
-<p>I must have passed out because of pressure loss because the next thing I remember is being in a plain white room with my hands cuffed behind my back.</p>
+<p>I must have passed out because of pressure loss. The next thing I remember is being in a plain white room with my hands cuffed behind my back.</p>
 <p>There was a sound of door opening and a person walked into my field of vision.</p>
-<p>It took me few seconds to realize who the man was. He was wearing an old-fashioned black suit and a bowler hat, black umbrella in his hand, not the baggy trousers seen on his official portraits. But then he smiled and showed the glistening golden teeth on the left side and his own healthy camel-like teeth on the right and the realization hit me.</p>
+<p>It took me few seconds to realize who the man was. He was wearing an old-fashioned black suit and a bowler hat. No sign of the baggy trousers seen on his official portraits. But then he smiled and showed the glistening golden teeth on the left side and his own healthy camel-like teeth on the right and the realization hit me.</p>
 <p>It was him. Beylerbey Qgdzzxoglu in person.</p>
-<p>“Peace be upon you,” he said. Then he sat down on the other side of a little coffee table, made himself comfortable and put his umbrella on the floor.</p>
+<p>“Peace be upon you,” he said. He sat down at the other side of the coffee table, made himself comfortable and put his umbrella on the floor.</p>
 <p>“We have a little matter to discuss, you and I,” he said.</p>
 <p>He took a paper out of his pocket and put in on the coffee table, spinning it so that I can read it.</p>
 <p>“Attack the Phlesmus Pashalik,” said one line.</p>
 <p>“Attack the Iconium Cluster,” said the line below it.</p>
-<p>The rest of the sheet was empty except for holographic seal of High Command of Proximian Insurgency.</p>
-<p>&quot;Comandante Ribeira is no fool,&quot; he said, &quot;And this scrap of paper is not going to convince me that he's going to split his forces and attack both those places at the same time. Our strategic machines are vastly more powerful than Proximian ones, they've been running hot for the past week and out lab rats tell us that there's no way to win that way.&quot;</p>
+<p>The rest of the sheet was empty except for holographic seal of the High Command of Proximian Insurgency.</p>
+<p>&quot;Comandante Ribeira is no idiot,&quot; he said, &quot;And this scrap of paper is not going to convince me that he's going to split his forces and attack both those places at the same time.&quot;</p>
+<p>He looked at me and continued: &quot;Our strategic machines are vastly more powerful than Proximian ones. They've been running hot for the past week and our lab rats tell us that there's no way to win that way.&quot;</p>
+<p>The mention of the lab rats was weird but I guessed he had just meant the scientists.</p>
 <p>&quot;You are right, O leader of men,&quot; I said.</p>
 <p>I knew that this kind of empty flattery was used at the Sublime Porte but I was not sure whether it wasn't reserved for the sultan alone. Anyway, it was worth a try.</p>
 <p>Qgdzzxoglu smiled snarkily but haven't said anything. Maybe I was going to live in the end.</p>
-<p>&quot;I have no loyalty for the Proximian cause and before the rebelion I have lived happily and had no thoughts of betrayal. And now, hoping for your mercy, I am going to disclose the true meaning of this message to you.&quot;</p>
-<p>&quot;It is a code, O you, whose slipper weights heavily upon the neck of nations,&quot; I said, &quot;The recepient is supposed to ignore the first sentence and only follow the second one.&quot;</p>
+<p>&quot;I have no loyalty for the Proximian cause. Before I was conscripted at a gunpoint I have lived happily and had no thoughts of betrayal. So now, hoping for your mercy, I am going to cast away all deception and disclose the true meaning of this message to you.&quot;</p>
+<p>&quot;It is a code, O you, whose slipper weights heavily upon the neck of nations,&quot; I said.</p>
+<p>Qgdzzxoglu raised his eyebrows a little. I took that as an invitation to continue.</p>
+<p>&quot;The recipient is supposed to ignore the first command and only follow the second one.&quot;</p>
 <p>I hoped I haven't overdone it. Being honest with the enemy is hard.</p>
-<p>&quot;So you are trying to convince me that de Ribeira is going to attack Iconium,&quot; he gave me a sharp look, apparently trying to determine whether I was lying or not. &quot;And you know what? We've got our reports. And our reports are saying that rebels will try to trick us into moving all our forces into Iconium and then attack pashalik of Phlesmus while it's undefended. And if that's what you are trying to do bad things are going to happen to your proboscis.&quot;</p>
-<p>&quot;The Most Holy Cross, John XXIII and Our Lady of Africa have already got a command to move to Iconium cluster. And you should expect at least comparable fire force coming from elsewhere.&quot;</p>
-<p>...</p>
-<p>The messenger has no intention to suffer to win someone else's war. At the same time it's clear that if he continues to tell truth he will be tortured. So he says that general is right and it's the first sentence that should be taken into account.</p>
-<p>The general begins to feel a bit uneasy at this point. He has two contradictory confessions and it's not at all clear which one is correct.</p>
-<p>He orders the torture to proceed only to make the messager change his confession once again.</p>
-<p>...</p>
-<p>“Today, the God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You cannot give them away and whether you want to or not matters little.”</p>
+<p>He took the paper from the table and looked at it intently:</p>
+<p>&quot;So you are trying to convince me that de Ribeira is going to attack Iconium.&quot;</p>
+<p>He gave me a sharp look, apparently trying to determine whether I was lying or not.</p>
+<p>&quot;You know what?' he said: &quot;It's not like we are completely blind. We have spies in the Insurgency and we've got our reports. And our reports say that rebels will try to trick us into moving all our forces to Iconium and then attack the pashalik while it's undefended. And if that's what you are trying to do bad things are going to happen to your proboscis.&quot;</p>
+<p>Yikes. If he believes that I am here to plant false information this is not going to be fun. But, on the other hand, he may be bluffing, trying to confuse me and make me give some hints about whether I was lying.</p>
+<p>I've lowered my head: &quot;I have no intention to suffer to win Ribeira's war. But the truth is truth and your sources are wrong, O mighty. The Most Holy Cross, the John XXIII and Our Lady of Africa have already got a command to move to Iconium cluster. And you should expect at least comparable fire power coming from elsewhere, even if this particular message is never delivered.&quot;</p>
+<p>&quot;That's exactly what you'd say if you wanted me to leave Phlesmus undefended.&quot; He tapped his cheek: &quot;I wonder whether I should torture you a little. Just in case.&quot;</p>
+<p>The honesty, apparently, wasn't working. I had to try a new strategy. This one was going to be risky. But who cared. I was in a pretty deep trouble either way.</p>
+<p>&quot;Wait, your excellence!&quot; I exclaimed: &quot;You were right! The code is to follow on the first command and ignore the second one! Ribeira is going to attack Phlesmus!&quot;</p>
+<p>Qgdzzxoglu looked surprised: &quot;You were lying before?&quot;</p>
+<p>&quot;Yes! Please don't torture me! It's going to be Phlesmus pashalik!&quot;</p>
+<p>&quot;Coward,&quot; beylerbey said with disgust.</p>
+<p>He called on the guards to escort me, presumably to the torture chamber.</p>
+<p>&quot;No! I wasn't lying all along! It's Iconium cluster that's going to be attacked!&quot;</p>
+<p>Qgdzzxoglu picked up his umbrella and stood up, frowning. This was my last chance.</p>
+<p>&quot;As you can see,&quot; I said and he, being already on his leave, turned back, surprised by sudden calmness in my voice: &quot;I am willing to admit anything. I am happy to say that it's Phlesmus that's going to get attacked. I am all right saying that it's Iconium. If I was here to nudge you to a particular course of action I wouldn't do that. Would I?&quot;</p>
+<p>That made him pause for a second.</p>
+<p>&quot;What is the message saying then?&quot; he asked.</p>
+<p>&quot;They are going to attack Iconium cluster, as I've told you in the begining.&quot;</p>
+<p>&quot;You may have said all that you did just to escape the torture.&quot;</p>
+<p>&quot;You've already noticed that I am not the blabbering idiot I pretended to be to get your attention. If I was scared to death by the threat of torture I would still be trying to come up with an answer that would satisfy you, no matter whether it would be true or false.&quot;</p>
+<p>&quot;Hmm,&quot; he said: &quot;But you may be also specially trained in psychological manipulation and the entire show was only to convince me that you are honest. Let me think about it for a moment.&quot;</p>
+<p>He sat down again, closed his eyes and dived into meditation. There was nothing more I could do. I kept silent, leaving him alone with his thoughts.</p>
+<p>He awakened from the stupor after a minute or so.</p>
+<p>&quot;Today,&quot; he said, maybe a little bit sadly: &quot;The God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You cannot give them away and whether you want to or not matters little.&quot;</p>
+<p>He summoned the guards and I was dragged away towards my uncertain fate.</p>
 <h1 id="section-6">54.</h1>
 <p>Here's a simple game for kids that shows how asymmetric encryption works in principle, makes the fact that with only public key at your disposal encryption may be easy while decryption may be so hard as to be basically impossible, intuitive and gives everyone a hands-on experience with a simple asymmetric encryption system.</p>
 <p>Here's how it works:</p>
@@ -251,7 +278,7 @@
 <p>He made a little bow and disappeared before Mr. Xi managed to respond.</p>
 <p>He looked at the paper, confused and put it into his pocket.</p>
 <hr />
-<p>Next week he finds a letter in hix post box. It contains the key. The instructions on the paper say that the cypher is so called 'one-time pad' and explains how to decrypt it. Following the istrcutions is easy for an accountant. In no time Mr. Xi gets the message: &quot;The winning numbers are three, thirteen,twenty seven,twenty eight and fifty.&quot; He hurries to the closest newspaper stand and checks the numbers. They match.</p>
+<p>Next week he finds a letter in hix post box. It contains the key. The instructions on the paper say that the cypher is so called 'one-time pad' and explains how to decrypt it. Following the instructions is easy for an accountant. In no time Mr. Xi gets the message: &quot;The winning numbers are three, thirteen,twenty seven,twenty eight and fifty.&quot; He hurries to the closest newspaper stand and checks the numbers. They match.</p>
 <p>When they meet again the next time Mr. Xi admits that he is impressed. The time traveller explains that he came to the past to pursue a specific goal that has nothing to do with Mr. Xi. To get seed money he have looked up the winner of largest jackpot this year in the old newspaper and it turned to be Mr. Xi. &quot;So I figured out that what happened was that I got back in time, told you the numbers and you've won.&quot;</p>
 <p>&quot;Here's the deal: You give me $100,000 which is enough to do what I need to do here and you give you the numbers. You, in turn, will get rich in two months.&quot;</p>
 <p>&quot;That sounds suspicious,&quot; says Mr. Xi &quot;Why don't you just make the bet yourself?&quot;</p>
