Story of Nick and Abraham added
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -217,7 +217,31 @@
 <p>He awakened from the stupor after a minute or so.</p>
 <p>&quot;Today,&quot; he said, maybe a little bit sadly: &quot;The God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You cannot give them away and whether you want to or not matters little.&quot;</p>
 <p>He summoned the guards and I was dragged away towards my uncertain fate.</p>
-<h1 id="section-7">54.</h1>
+<h1 id="section-7">44.</h1>
+<p>Dear Grandma,</p>
+<p>I hope you are well. Also, best wishes for you birthday last month.</p>
+<p>I am writing you because I have a problem you may be able to solve.</p>
+<p>You've been visiting us recently and so you know how we always figth with Judy about splitting of the chores. You may have also noticed that Judy is much louder than I am and also a big whiner. In the end that means that I am always assigned more work than Judy. And that's not fair.</p>
+<p>I know that Judy -- although she ignores whatever she is said -- actually respects you and often does what you say. Can you please write her a letter and ask her to play fair?</p>
+<p>With love,<br />Toddy</p>
+<p>Dear Grandma,</p>
+<p>I've shown your letter to Judy. She read it and said that she recognizes the system. She said it was used by prisoners in concentration camps. When they had to split bread, one would cut it in two, the other one would choose the half to take. You could have told me. I am not a little boy anymore, you know.</p>
+<p>Anyway, we've tried it with chores. I've spent two hours devising a perfect split. It went into smallest details assigning even tasks like vacuuming between radiator fins which we do, like, twice a year. If we had adopted that plan everything would have been well. However, Judy spoiled everything and choose the part I was planning to do. How is that supposed to be fair?</p>
+<p>With love,<br />Toddy</p>
+<p>Dear Grandma,</p>
+<p>We've tried re-splitting the chores maybe twenty or thirty times in a row. First I proposed a split and Judy chose the easier part. Then I proposed a different split and Judy again took the easier part. When that went on for a while I said it was not fair and that I want to choose as well. So Judy proposed a split and I chose the easy half (no vacuuming!) Then she proposed a different split with vacuuming of ground floor in one part and vacuuming of top floor in the other part. There was no way to avoid vacuuming altogether. Anyway, after like two hours we've got a split that we were both happy with.</p>
+<p>So, thanks for the advice. It may work in the end. And the best thing is that Judy can't whine now. If she does I would just propose to exchange our chores. And she knows that so she doesn't even try.</p>
+<p>With love,<br />Toddy</p>
+<p>Dear Grandma,</p>
+<p>It turns out to be more complicated than I thought. I felt I've been doing more work than Judy so I proposed to add vacuuming of the guest room to her chores. I was right because she accepted it. The I proposed adding vacuuming of the small toilet by the guest room to her chores and she accepted it again. Then I proposed that she vacuums my room as well and she chose to exchange the chores. Now I was left with almost all of the vacuuming!</p>
+<p>Now here comes the unfair part: I've backtracked and proposed that she doesn't vacuum my room, just the guest room and the toilet. And she REFUSED to exchange to chores back. That's unfair! She agreed with that before! Can you please write her and say that people should always keep their word?</p>
+<p>Thanks!<br />Toddy</p>
+<p>Dear Grandma,</p>
+<p>Yes, I understand that I've challenged the status quo and that I should bear the consequences. The things have moved on here though. As angry as I was I stopped caring about keeping the living room (to be cleaned up by Judy) clean. I mean, if she doesn't bother to keep her word why should I make life easier for here?</p>
+<p>Judy yelled at me and made a mess in the kitchen (to be cleaned up by me).</p>
+<p>This is getting ridiculous. Now we both have more work to do than we used to while we were figthing. Can you please write her a letter and ask her to stop?</p>
+<p>Thanks!<br />Todd</p>
+<h1 id="section-8">54.</h1>
 <p>Here's a simple game for kids that shows how asymmetric encryption works in principle, makes the fact that with only public key at your disposal encryption may be easy while decryption may be so hard as to be basically impossible, intuitive and gives everyone a hands-on experience with a simple asymmetric encryption system.</p>
 <p>Here's how it works:</p>
 <p>Buy a dictionary of some exotic language. The language being exotic makes it improbable that any of the kids involved in the game would understand it. Also, it makes cheating by using Google Translate impossible.</p>
@@ -226,13 +250,13 @@
 <p>To distribute the public key to everyone involved in the game you can either buy multiple copies of English-Eskimo dictionary, which may be expensive, or you can simply place a single copy at a well-known location. In school library, at a local mom-and-pop shop or at a secret place known only to the game participants.</p>
 <p>If a kid wants to send an encrypted message to the owner of the secret key, they just use the public key (English-Eskimo dictionary) to translate the message, word-by-word, from English to Eskimo. The owner of the secret key (Eskimo-English dictionary) can then easily decrypt the message by translating it back into English.</p>
 <p>However, if the message gets intercepted by any other game participant, decrypting it would be an extremely time consuming activity. Each word of the message would have to be found in English-Eskimo dictionary, which would in turn mean scanning the whole dictionary in a page-by-page and word-by-word manner!</p>
-<h1 id="section-8">65.</h1>
+<h1 id="section-9">65.</h1>
 <p>Have you figured out how the trick was done?</p>
 <p>If so, find a key that will turn following cyphertext</p>
 <pre><code>ZUWLCELJCKKXV ZF,MP EOWZ,HB</code></pre>
 <p>into a plaintext saying:</p>
 <p>BEWARE OF THE ONE EYED MAN!</p>
-<h1 id="section-9">78.</h1>
+<h1 id="section-10">78.</h1>
 <p>It's a puppet show. There are two hills on the stage with country border between them. Law-abiding citizen is on the right hill. Smuggler enters the stage on the left.</p>
 <p>SMUGGLER: Hey, you!</p>
 <p>CITIZEN: Who? Me?</p>
@@ -261,14 +285,81 @@
 <p>SMUGGLER: Ok, got it, let's meet there in an hour!</p>
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
-<h1 id="section-10">88.</h1>
+<h1 id="section-11">88.</h1>
 <p><img src="trithemius1.png" /></p>
-<h1 id="section-11">92.</h1>
+<h1 id="section-12">92.</h1>
 <p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
 <p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
 <p>The silence is almost palpable.</p>
 <p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
-<h1 id="section-12">99.</h1>
+<h1 id="section-13">96.</h1>
+<p>Host: &quot;Abraham and Nick now have 13,600 pounds in front of them. We know they've got it, but the golden question is: Can they keep it?&quot;</p>
+<p>&quot;Abraham and Nick, you now face a very straightforward choice, but it's a choice that could make one or both of you extra wealthy. But it could also lose both of you everything that you have fought for today.&quot;</p>
+<p>To the audience: &quot;They have to decide to SPLIT or STEAL!&quot;</p>
+<p>Muzak plays.</p>
+<p>Host: &quot;Abraham, Nick, you have two final golden balls in front of you. And they are the most important golden balls in the game. You each have a golden ball with the owrd SPLIT written inside. You both have a ball with the word STEAL written inside. You will know which is SPLIT and which is STEAL because you can have a look. If you both pick the split ball you split the 13,600 and you go home with 6,800 each. If one of you choses the STEAL ball and the other choses the SPLIT ball whoever choses the STEAL ball goes home with the whole lot, 13,600. But if you both chose the STEAL ball you'll leave today's game with what you came with. Nothing.&quot;</p>
+<p>&quot;It's the ultimate test of faith, trust, and let's face it, greed. Take a moment to look at the balls in front of you so that you know for definite which is SPLIT and which is STEAL, but obviosuly, keep them concealed from each other. Just have a look.&quot;</p>
+<p>Abraham and Nick are checking the balls.</p>
+<p>Host: &quot;OK.It's the easiest choice but the most difficult one. What I want you to do is to spend half a minute talking to each other about what you both should do. Nick. Abraham.&quot;</p>
+<p>Nick: &quot;Abraham, I want you to trust me. One hundred percent I am going to pick STEAL ball.&quot;</p>
+<p>Abraham: &quot;Sorry, you gonna...&quot;</p>
+<p>Nick: &quot;I am going to choose the STEAL ball. I want you to do split and I promise you that I will spilt the money with you.&quot;</p>
+<p>Abraham: &quot;After you picked STEAL?&quot;</p>
+<p>Nick: &quot;Yeah.&quot;</p>
+<p>Abraham: &quot;You can [inaudible] STEAL. I am going to take SPLIT. So you take the money...&quot;</p>
+<p>Nick: &quot;And I will split it with you.&quot;</p>
+<p>Abraham: &quot;After the show.&quot;</p>
+<p>Nick: &quot;Yeah.&quot;</p>
+<p>Audience laughs and applauds.</p>
+<p>Nick: &quot;I promise you I'll do that. If you do STEAL we'll both walk away with nothing. I'm telling you I am one hundred percent going to do it.&quot;</p>
+<p>Abraham: &quot;I'll give you another alternative. What if we just both pick SPLIT?&quot;</p>
+<p>Nick: &quot;I'm not gonna pick SPLIT. I'm gonna STEAL. Abraham, honestly, one hundred percent, I'm gonna STEAL.</p>
+<p>Abraham: &quot;It's [inaudible] STEAL?&quot;</p>
+<p>Nick: &quot;No. I am honest and I am going to tell you...&quot;</p>
+<p>Abraham: &quot;You are honest?&quot;</p>
+<p>Nick: &quot;I am. That's why I'm telling you I'm gonna STEAL. If you do SPLIT then I will split the money.&quot;</p>
+<p>Abraham: &quot;I can't see what's your [inaudible].&quot;</p>
+<p>Nick: &quot;OK, so I am gonna STEAL so we're gonna leave with nothing.&quot;</p>
+<p>Abraham: &quot;Where is your brains coming from?&quot;</p>
+<p>Nick points finger to his head. Audience laughs.</p>
+<p>Abraham: &quot;I can't work a...&quot;</p>
+<p>Nick: &quot;I know. I am a decent guy and I will split the money with you.&quot;</p>
+<p>Abraham: &quot;No, we should just pick SPLIT then.&quot;</p>
+<p>Nick: &quot;No. I'm gonna do STEAL.&quot;</p>
+<p>Host: &quot;There is no reason for him to give you the money.&quot;</p>
+<p>Abraham: &quot;Of course.&quot;</p>
+<p>Abraham: &quot;If I gave you my word... Now let me tell you what my word means.&quot;</p>
+<p>Nick: &quot;OK.&quot;</p>
+<p>Abraham: &quot;My father once said to me: A man who doesn't keep his word is not a man. He's not worth nothing. Not worth a dollar.&quot;</p>
+<p>Nick: &quot;I agree.&quot;</p>
+<p>Abraham: &quot;So...&quot;</p>
+<p>Nick: &quot;Abraham, I'm gonna STEAL so you've got the choice.&quot;</p>
+<p>Audience laughs.</p>
+<p>Nick: &quot;You either STEAL and we'll both walk away with nothing cause, you know, I've told you my intention and I've told you that I will split the money with you afterwards.&quot;</p>
+<p>Abraham: &quot;If you took my word I was gonna split I would split... and you gonna take STEAL so...&quot;</p>
+<p>Host: &quot;The only way you can guarantee to walk away with 6,800 is that you both put SPLIT bullet and I do now have to push you for a decision. It's a tough one.&quot;</p>
+<p>Abraham: &quot;It's lost. We've lost everything.&quot;</p>
+<p>Nick: &quot;OK.&quot;</p>
+<p>Abraham: &quot;We'll walk out without money because you are an idiot.&quot;</p>
+<p>Nick: &quot;No, that's not...&quot;</p>
+<p>Abraham: &quot;You are an idiot. That's what you are. You are an idiot.&quot;</p>
+<p>Host: &quot;This can go on all night and this people gonna get up for breakfast... Nick, choose SPLIT or STEAL! Abraham, choose SPLIT or STEAL! Now, please! Choose a ball!&quot;</p>
+<p>Both Abraham and Nick reach out for the balls.</p>
+<p>Abraham to Nick: &quot;Right, I'll tell you what. I'm gonna go with you.&quot;</p>
+<p>Nick: &quot;OK.&quot;</p>
+<p>Abraham: &quot;I'm gona go with you.&quot;</p>
+<p>Nick: &quot;I promise you. I will split it.&quot;</p>
+<p>Applause from the audience.</p>
+<p>Host: &quot;You cannot change your balls now.&quot;</p>
+<p>Host (in dramatic voice): &quot;SPLIT OR STEAL?&quot;</p>
+<p>Abraham and Nick both open the balls and show them to the audience.</p>
+<p>Both balls say &quot;SPLIT&quot;.</p>
+<p>Host: &quot;Congratulations! You've both split and each receives 6,800 pounds!</p>
+<p>Abraham: &quot;Why did you put me through that?! Why did you do that to me?!</p>
+<p>Audience laughs and applauds.</p>
+<p>Abraham and Nick shake hands.</p>
+<p>Abraham: &quot;You are the worst person I ever met.&quot;</p>
+<h1 id="section-14">99.</h1>
 <p>It was cold. The winter was approaching in New York. Mr. Xi wrapped his coat tighter to the body and stared into the dark tunnel with desperation. The subway was late. There must have been an accident somewhere. He sighed.</p>
 <p>&quot;Beg your pardon, mister,&quot; said a men standing besides him on the platform. Mr. Xi was not able to tell the accent. It sounded strange but not entirely alien.</p>
 <p>&quot;I have a matter to discuss with you,&quot; said the stranger &quot;but I am not sure how to approach it without making you think I am off my rocker.&quot;</p>
