Minor changes to Nick and Abraham story
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 <p>Host: &quot;The only way you can guarantee to walk away with 6,800 is that you both put SPLIT bullet and I do now have to push you for a decision. It's a tough one.&quot;</p>
 <p>Abraham: &quot;It's lost. We've lost everything.&quot;</p>
 <p>Nick: &quot;OK.&quot;</p>
-<p>Abraham: &quot;We'll walk out without money because you are an idiot.&quot;</p>
+<p>Abraham: &quot;We'll walk out without the money because you are an idiot.&quot;</p>
 <p>Nick: &quot;No, that's not...&quot;</p>
 <p>Abraham: &quot;You are an idiot. That's what you are. You are an idiot.&quot;</p>
 <p>Host: &quot;This can go on all night and this people gonna get up for breakfast... Nick, choose SPLIT or STEAL! Abraham, choose SPLIT or STEAL! Now, please! Choose a ball!&quot;</p>
@@ -355,8 +355,9 @@
 <p>Abraham and Nick both open the balls and show them to the audience.</p>
 <p>Both balls say &quot;SPLIT&quot;.</p>
 <p>Host: &quot;Congratulations! You've both split and each receives 6,800 pounds!</p>
+<p>Everybody's laughing.</p>
 <p>Abraham: &quot;Why did you put me through that?! Why did you do that to me?!</p>
-<p>Audience laughs and applauds.</p>
+<p>Audience cheers.</p>
 <p>Abraham and Nick shake hands.</p>
 <p>Abraham: &quot;You are the worst person I ever met.&quot;</p>
 <h1 id="section-14">99.</h1>
