Minor stylistic change
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@
 <p>Host: &quot;You cannot change your balls now.&quot;</p>
 <p>Host (in dramatic voice): &quot;SPLIT OR STEAL?&quot;</p>
 <p>Abraham and Nick both open the balls and show them to the audience.</p>
-<p>Both balls say &quot;SPLIT&quot;.</p>
+<p>Abraham's ball says &quot;SPLIT&quot;.</p>
+<p>Nick's ball says &quot;SPLIT&quot;.</p>
 <p>Host: &quot;Congratulations! You've both split and each receives 6,800 pounds!</p>
 <p>Everybody's laughing.</p>
 <p>Abraham: &quot;Why did you put me through that?! Why did you do that to me?!</p>
