--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
 <p>He awakened from the stupor after a minute or so.</p>
 <p>&quot;Today,&quot; he said, maybe a little bit sadly: &quot;The God, the Compassionate, the Merciful have taught me that there are secrets that cannot be given away. You cannot give them away to save yourself from torture. You cannot give them away to save your kids from being sold to slavery. You cannot give them away to prevent the end of the world. You cannot give them away and whether you want to or not matters little.&quot;</p>
 <p>He summoned the guards and I was dragged away towards my uncertain fate.</p>
-<h1 id="section-7">44.</h1>
+<h1 id="section-7">38.</h1>
+<p><img src="powe.png" /></p>
+<h1 id="section-8">44.</h1>
 <p>Dear Grandma,</p>
 <p>I hope you are well. Also, best wishes for you birthday last month.</p>
 <p>I am writing you because I have a problem you may be able to solve.</p>
@@ -241,7 +243,7 @@
 <p>Judy yelled at me and made a mess in the kitchen (to be cleaned up by me).</p>
 <p>This is getting ridiculous. Now we both have more work to do than we used to while we were figthing. Can you please write her a letter and ask her to stop?</p>
 <p>Thanks!<br />Todd</p>
-<h1 id="section-8">54.</h1>
+<h1 id="section-9">54.</h1>
 <p>Here's a simple game for kids that shows how asymmetric encryption works in principle, makes the fact that with only public key at your disposal encryption may be easy while decryption may be so hard as to be basically impossible, intuitive and gives everyone a hands-on experience with a simple asymmetric encryption system.</p>
 <p>Here's how it works:</p>
 <p>Buy a dictionary of some exotic language. The language being exotic makes it improbable that any of the kids involved in the game would understand it. Also, it makes cheating by using Google Translate impossible.</p>
@@ -250,13 +252,13 @@
 <p>To distribute the public key to everyone involved in the game you can either buy multiple copies of English-Eskimo dictionary, which may be expensive, or you can simply place a single copy at a well-known location. In school library, at a local mom-and-pop shop or at a secret place known only to the game participants.</p>
 <p>If a kid wants to send an encrypted message to the owner of the secret key, they just use the public key (English-Eskimo dictionary) to translate the message, word-by-word, from English to Eskimo. The owner of the secret key (Eskimo-English dictionary) can then easily decrypt the message by translating it back into English.</p>
 <p>However, if the message gets intercepted by any other game participant, decrypting it would be an extremely time consuming activity. Each word of the message would have to be found in English-Eskimo dictionary, which would in turn mean scanning the whole dictionary in a page-by-page and word-by-word manner!</p>
-<h1 id="section-9">65.</h1>
+<h1 id="section-10">65.</h1>
 <p>Have you figured out how the trick was done?</p>
 <p>If so, find a key that will turn following cyphertext</p>
 <pre><code>ZUWLCELJCKKXV ZF,MP EOWZ,HB</code></pre>
 <p>into a plaintext saying:</p>
 <p>BEWARE OF THE ONE EYED MAN!</p>
-<h1 id="section-10">78.</h1>
+<h1 id="section-11">78.</h1>
 <p>It's a puppet show. There are two hills on the stage with country border between them. Law-abiding citizen is on the right hill. Smuggler enters the stage on the left.</p>
 <p>SMUGGLER: Hey, you!</p>
 <p>CITIZEN: Who? Me?</p>
@@ -285,14 +287,14 @@
 <p>SMUGGLER: Ok, got it, let's meet there in an hour!</p>
 <p>PATROL: Oh my, oh my. I am much better at de-obfuscation than that moron citizen. I've already got two messages solved. But one has number 56, the other number 110. I have no idea which one is going to be number 18. There's no way I can find the right one in just one hour!</p>
 <p>The curtain comes down. Happy gulping sounds can be heard from the backstage.</p>
-<h1 id="section-11">88.</h1>
+<h1 id="section-12">88.</h1>
 <p><img src="trithemius1.png" /></p>
-<h1 id="section-12">92.</h1>
+<h1 id="section-13">92.</h1>
 <p>Professor Krankenstein and his associated held a meeting on board of Amor Patrio, in the middle of Pacific Ocean. People came up with desperate proposals: Let's dig a tunnel underneath Moscow river. Let's blackmail Russians by re-creating the virus and threatening them to disperse it in Russia. Nuke the entire Moskovskaya Oblast! There was no end to wild and desperate proposals.</p>
 <p>Once the stream of proposals dried up, everyone looked at professor Krankenstein, awaiting his decision.</p>
 <p>The silence is almost palpable.</p>
 <p>Professor Krankenstein slowly took out his iconic pipe and lighted it with the paper which had the decryption key written on it.</p>
-<h1 id="section-13">96.</h1>
+<h1 id="section-14">96.</h1>
 <p>Host: &quot;Abraham and Nick now have 13,600 pounds in front of them. We know they've got it, but the golden question is: Can they keep it?&quot;</p>
 <p>&quot;Abraham and Nick, you now face a very straightforward choice, but it's a choice that could make one or both of you extra wealthy. But it could also lose both of you everything that you have fought for today.&quot;</p>
 <p>To the audience: &quot;They have to decide to SPLIT or STEAL!&quot;</p>
@@ -361,7 +363,7 @@
 <p>Audience cheers.</p>
 <p>Abraham and Nick shake hands.</p>
 <p>Abraham: &quot;You are the worst person I ever met.&quot;</p>
-<h1 id="section-14">99.</h1>
+<h1 id="section-15">99.</h1>
 <p>It was cold. The winter was approaching in New York. Mr. Xi wrapped his coat tighter to the body and stared into the dark tunnel with desperation. The subway was late. There must have been an accident somewhere. He sighed.</p>
 <p>&quot;Beg your pardon, mister,&quot; said a men standing besides him on the platform. Mr. Xi was not able to tell the accent. It sounded strange but not entirely alien.</p>
 <p>&quot;I have a matter to discuss with you,&quot; said the stranger &quot;but I am not sure how to approach it without making you think I am off my rocker.&quot;</p>
