Instructions for steganography puzzle.
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
 <p>He summoned the guards and I was dragged away towards my uncertain fate.</p>
 <h1 id="section-7">38.</h1>
 <p><img src="powe.png" /></p>
+<ul>
+<li>TWO ROWS, NOT THREE<br /></li>
+<li>RECALL BACON<br /></li>
+<li>ONE GOT IT WRONG</li>
+</ul>
+<p>Last letter of the message is missing. There haven't been enough people. Take the missing letter, take its numeric value, multiply it by seven, continue reading at that section.</p>
 <h1 id="section-8">44.</h1>
 <p>Dear Grandma,</p>
 <p>I hope you are well. Also, best wishes for you birthday last month.</p>
